--- a/LivingDesign/Info.plist
+++ b/LivingDesign/Info.plist
@@ -38,7 +38,9 @@
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Detail</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Home</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
